@@ -1,4 +1,5 @@
 Current Release
+- Made it possible to use other authentication methods other than LDAP.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
